Revert "- overflow property is still problematic" (turns out this is a mozilla bug)
This reverts commit a254a588c37322fb067065fa0e6523869d994b17.

--- a/cc-figure/css/grau.css
+++ b/cc-figure/css/grau.css
@@ -2,6 +2,7 @@
 [about] {
     border: 1px solid #888a85;
     background: #eeeeec;
+    overflow-x: hidden;
     padding: 11px;
 }
 
